--- a/About_me.html
+++ b/About_me.html
@@ -2,45 +2,70 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <title>About Me</title>
+  <style>
+    body {
+      margin: 0;
+      box-sizing: border-box;
+    }
 
-  <title>About me</title>
+    .container {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background: linear-gradient(to right, rgba(0, 0, 0, .5), rgba(0, 0, 0, .1)), url('https://images.unsplash.com/photo-1595624871930-6e8537998592?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
 
-  </head>
+    h1 {
+      font-size: 50px;
+      color: #fff;
+      text-transform: uppercase;
+      font-weight: 700;
+      margin-bottom: 1rem;
+    }
+
+    h2 {
+      font-size: 2rem;
+      color: #fff;
+      font-weight: 700;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1.5rem;
+      color: #fff;
+      font-weight: 700;
+      margin-bottom: 1rem;
+    }
+
+    a {
+      padding: 15px 20px;
+      background: #52caee;
+      font-size: 1rem;
+      text-decoration: none;
+      color: #333333;
+      border-radius: .25rem;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.808)
+    }
+  </style>
+</head>
+
 <body>
-  <div class="head">
-
-
-
-
-  </div>
-
-  <div class="nav">
-
-  </div>
-
-  <div class="main">
+  <div class="container">
     <h1>Krupali Dangshiya</h1>
-    <h3>My Hobbies</h3>
-    <ul>
-      <li><a href="https://www.cricbuzz.com/">Playing Cricket</a></li>
-      <li><a href="https://en.wikipedia.org/wiki/Harry_Potter">Reading books</a></li>
-      <li><a href="https://www.moneycontrol.com/">Making websites</a></li>
-    </ul>
+    <h2>My Hobbies</h2>
+    <p>I am learning Web Developement course through Coursera. I Love playing Games.</p>
     <p>
-      I am learning Web Developement course through Coursera. I Love playing Games.
-    </p>
+        <li><a href="https://www.moneycontrol.com/">Making websites</a></li></p>
   </div>
-
-  <div class="aside">
-
-  </div>
-
-  <div class="footer">
-
-  </div>
-
 </body>
+
 </html>
